kueb-proj.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-proj-deployment
  labels:
    app: kube-proj
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-proj
  template:
    metadata:
      labels:
        app: kube-proj
    spec:
      containers:
      - name: kube-proj
        image: shravanvallanban/team9-project:latest
        ports:
        - containerPort: 8080
