flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
spec:
  selector:
    matchLabels:
      app: flask
  replicas: 1
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: flask-image
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: flask
